--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,49 +1,7 @@
 <resources>
-    <string name="app_name">bcaas</string>
+    <string name="app_name">Bcaas</string>
 
-    <string name="wallet_info_exception">錢包信息異常！</string>
-    <string name="password_rule">密碼至少由八位數組成</string>
-    <string name="import_wallet_pwd_rule">密碼至少由6位帶**字符組成</string>
-    <string name="confirm_two_pwd_is_consistent">請確認兩次密碼輸入一致！</string>
-    <string name="pending_transaction">待處理交易</string>
-    <string name="account_address_eg">eg:kjahdgfahjbdfkjahbdnkajbdnkjhbajh==</string>
-    <string name="input_pwd">請輸入密碼</string>
-    <string name="wallet_info">錢包信息</string>
-    <string name="private_key">私鑰</string>
-    <string name="email_json">郵件發送文件</string>
-    <string name="address_name">帳戶名稱</string>
-    <string name="address">地址</string>
-    <string name="please_input_address">情輸入地址</string>
-    <string name="loading">Loading</string>
-
-    <string name="save_data_failure">保存數據失敗</string>
-    <string name="currency">幣種</string>
-    <string name="my_account">我的帳戶</string>
-    <string name="balance">餘額</string>
-    <string name="receive_account">收款帳戶</string>
-    <string name="transaction_detail_key">向***轉帳</string>
-    <string name="please_input_transaction_password">請輸入交易密碼</string>
-    <string name="transaction_password">交易密碼</string>
-    <string name="setpwd">請設置8位字符的密碼</string>
-    <string name="confirm_pwd">確認密碼</string>
-    <string name="confirm_pwd_not_null">請確認密碼輸入不為空！</string>
-    <string name="login_failure">登錄失敗，請重試！</string>
-    <string name="logout">退出登錄</string>
-    <string name="logout_failure">退出當前帳戶失敗。</string>
-    <string name="dataexceptionofaccount">帳戶數據異常！</string>
-    <string name="data_error">獲取數據異常。</string>
-    <string name="transactioning">當前正在發起交易，請勿退出。</string>
-    <string name="no_wallet_to_unlock">沒有可解鎖的錢包。</string>
-    <string name="password_error">密碼輸入錯誤。</string>
-    <string name="please_input_transaction_amount">請輸入交易數額</string>
-    <string name="please_input_destination_address">請輸入收款帳戶地址</string>
-    <string name="copy_acount_address_success">複製帳戶地址成功。</string>
-    <string name="sure_delete">確定刪除：</string>
-    <string name="private_key_format_exception">私鑰格式異常</string>
-    <string name="verify_success">驗證成功</string>
-
-    <!--translate   -->
-
+    <!--translate   first-->
     <string name="unlock">解鎖</string>
     <string name="password">密碼</string>
     <string name="create_new_wallet">創建新錢包</string>
@@ -51,7 +9,7 @@
     <string name="warning">提示</string>
     <string name="create_wallet_dialog_message">創建新錢包會刪除現有錢包的所有信息，請確保現有錢包的私鑰信息已經完成備份！</string>
     <string name="import_wallet_dialog_message">導入錢包會刪除現有錢包的所有信息，請確保現有錢包的私鑰信息已經完成備份！</string>
-    <string name="sure">确定</string>
+    <string name="sure">確定</string>
     <string name="cancel">取消</string>
     <string name="please_input_password_again">請再次輸入密碼</string>
     <string name="remember_password">該密碼用於加錢包信息和解鎖錢包，請牢記！！</string>
@@ -59,11 +17,8 @@
     <string name="backup_private_key">備份私鑰</string>
     <string name="backup_private_key_detail">這是您錢包的私鑰，當密碼忘記時，可恢復您的錢包，丟失私鑰等於丟失財產。為妥善保存，建議在一張紙上寫下你的私鑰信息，以防丟失。</string>
     <string name="finish">完成</string>
-    <string name="input_private_key">請輸入私鑰</string>
-    <string name="set_password_for_your_wallet">請為導入的錢包設置密碼</string>
     <string name="my_account_address">我的帳戶地址</string>
     <string name="account_balance">帳戶餘額</string>
-    <string name="unpocketed_transactions">待處理的交易</string>
     <string name="home">首頁</string>
     <string name="receive">接收</string>
     <string name="scan">掃描</string>
@@ -84,16 +39,72 @@
     <string name="Language_switching">語言切換</string>
 
 
-    <string name="scan_warning">請對準二維碼，耐心等待</string>
     <string name="double_click_for_exit">再按一次返回鍵退出程序</string>
     <string name="no_address_to_choose">當前沒有可選的地址</string>
     <string name="input_address_info">請輸入地址的相關信息</string>
-    <string name="send_success">發送成功</string>
-    <string name="please_input_account_address">請輸入帳戶地址。</string>
     <string name="please_open_camera_permission">請手動打開相機權限</string>
     <string name="transaction_to">向  %s   轉帳</string>
     <string name="authorized_representative_address">授權代表地址帳戶</string>
     <string name="no_block_service">沒有可顯示的幣種信息</string>
 
+
+    <!--translate  Second-->
+    <string name="password_error">密碼錯誤</string>
+    <string name="enter_private_key">請輸入私鑰</string>
+    <string name="input_error">輸入錯誤</string>
+    <string name="logout">登出</string>
+    <string name="logout_failure">登出帳戶失敗</string>
+    <string name="set_password_for_your_wallet">設置密碼</string>
+    <string name="input_password">請輸入密碼</string>
+    <string name="save_wallet_file_warning">錢包文件和私鑰請妥善保管，私鑰丟失將丟失錢包。</string>
+    <string name="check_my_transaction_records">查看我的交易紀錄</string>
+    <string name="transaction_has_successfully">交易發送成功</string>
+    <string name="transaction_has_failure">交易發送失敗，請稍後再試</string>
+    <string name="transaction_has_successfully_and_the_number_is">交易已發送成功，交易編號如下：</string>
+    <string name="chick_o_the_copy">點擊複製</string>
+    <string name="authorized_representative_can_not_be_modified">在初始區塊生成之前不能修改授權代表.收到第一筆交易之後會自動生成初始區塊。</string>
+
+    <!--translate third-->
+    <string name="scan_warning">請對準二維碼，耐心等待</string>
+    <string name="enter_address_of_the_authorized">請輸入授權代表帳戶地址</string>
+    <string name="address_format_error">地址格式錯誤</string>
+    <string name="change_successfully">更改成功</string>
+    <string name="change_failed">更改失敗</string>
+    <string name="login_failure">登入失敗，請稍後重試</string>
+    <string name="password_rule_of_length">密碼至少由8至16比特數位與字元組成</string>
+    <string name="password_rule_of_content">密碼必須包含數位和字元</string>
+    <string name="password_entered_not_match">兩次輸入的密碼不一致</string>
+    <string name="password_length_error">密碼長度錯誤</string>
+    <string name="please_log_in_first">您還未登錄，請先登錄</string>
+    <string name="sure_logout">確定退出？</string>
+    <string name="the_address_of_receiving_account_is_empty">收款帳戶地址為空</string>
+    <string name="the_address_of_receiving_account_is_error">收款帳戶地址錯誤</string>
+    <string name="private_key_error">私密金鑰格式錯誤</string>
+    <string name="insufficient_balance">餘額不足</string>
+    <string name="file_format_error">檔案格式錯誤</string>
+    <string name="please_upload_the_file">請上傳文件</string>
+    <string name="the_file_is_damaged_please_upload_again">檔案已損壞，請重新上傳</string>
+
+    <string name="wallet_info">錢包資訊</string>
+    <string name="private_key">私密金鑰</string>
+    <string name="address_name">帳戶名稱</string>
+    <string name="address">地址</string>
+    <string name="please_input_address">請輸入地址</string>
+    <string name="save_data_failure">保存數據失敗</string>
+    <string name="loading">Loading</string>
+    <string name="currency">幣種</string>
+    <string name="my_account">我的帳戶</string>
+    <string name="balance">餘額</string>
+    <string name="receive_account">收款帳戶</string>
+    <string name="confirm_pwd">確認密碼</string>
+    <string name="data_exception_of_account">帳戶數據异常！</string>
+    <string name="data_error">獲取數據异常</string>
+    <string name="on_transaction">當前正在發起交易，請勿退出</string>
+    <string name="no_wallet_to_unlock">沒有可解鎖的錢包。</string>
+    <string name="please_input_transaction_amount">請輸入交易數額</string>
+    <string name="please_input_destination_address">請輸入收款帳戶地址</string>
+    <string name="verify_success">驗證成功</string>
+    <string name="copy_account_address_success">複製帳戶地址成功</string>
+    <string name="sure_delete">確定删除</string>
 
 </resources>
