--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,8 +33,9 @@
     <string name="modify_password">Change Password</string>
     <string name="save_private_key_hint">We suggest you write down the private key  on a paper in case of loss.</string>
     <string name="send_email">Send by email</string>
+    <string name="send_wallet_file_by_email">Send wallet file by email</string>
     <string name="email_json_rule">When the APP is deleted,this file is used to restore the wallet .We suggest you backup this file by email.</string>
-    <string name="insert_address">Add address</string>
+    <string name="insert_address">Add account address</string>
     <string name="modify_authorized_representatives">Change authorized Representative</string>
     <string name="address_alias">Account alias</string>
     <string name="save">Save</string>
@@ -75,35 +76,34 @@
     <string name="file_format_error">File format error</string>
     <string name="please_upload_the_file">Please upload the file</string>
     <string name="the_file_is_damaged_please_upload_again">The file is damaged, please upload again</string>
-
+    <string name="please_login_again">Please login again</string>
 
     <string name="scan_warning">Please aim at the two-dimensional code and wait patiently</string>
     <string name="double_click_for_exit">Press the return button again to exit the program.</string>
-    <string name="no_address_to_choose">No alternative address is currently available.</string>
-    <string name="input_address_info">Please input the relevant information of the address.</string>
+    <string name="no_account_address_to_choose_from">Currently, there is no account address to choose from</string>
+
     <string name="please_open_camera_permission">Please manually open the camera privileges.</string>
     <string name="transaction_to">Transfer to %s  </string>
     <string name="authorized_representative_address">Authorized representative address account</string>
-    <string name="no_block_service">There is no currency information to display.</string>
     <string name="wallet_info">Wallet information</string>
     <string name="private_key">Private key</string>
     <string name="address_name">title of account</string>
     <string name="address">Address</string>
     <string name="please_input_address">Please input address.</string>
-    <string name="save_data_failure">Failed to save data.</string>
-    <string name="loading">Loading</string>
+    <string name="save_data_failure">Save data failed.</string>
     <string name="currency">Currency</string>
     <string name="my_account">My account</string>
     <string name="balance">Balance</string>
     <string name="receive_account">Account receivable account</string>
-    <string name="confirm_pwd">Confirm the password</string>
-    <string name="data_exception_of_account">Abnormal account data！</string>
-    <string name="data_error">Get data exception.</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="account_data_error">Account data error</string>
+    <string name="data_acquisition_error">Data acquisition error</string>
     <string name="on_transaction">Trading is currently under way, please do not quit.</string>
-    <string name="no_wallet_to_unlock">There is no unlock wallet.</string>
-    <string name="please_input_transaction_amount">Please enter transaction volume.</string>
-    <string name="please_input_destination_address">Please input the account address.</string>
-    <string name="verify_success">Verification success</string>
+    <string name="please_input_transaction_amount">Please enter transaction Amount.</string>
     <string name="copy_account_address_success">Duplicate account address successfully.</string>
-    <string name="sure_delete">Confirm deletion：</string>
+    <string name="sure_to_delete">Sure to delete</string>
+
+
+
+
 </resources>
