--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -41,7 +41,7 @@
 
 
     <string name="double_click_for_exit">再按一次返回鍵退出程序</string>
-    <string name="please_open_camera_permission">請打開相機權限</string>
+    <string name="please_grant_camera_permission">請打開相機權限</string>
     <string name="transaction_to">向  %s   轉帳</string>
     <string name="authorized_representative_address">授權代表地址帳戶</string>
 
@@ -63,7 +63,7 @@
     <string name="authorized_representative_can_not_be_modified">在初始區塊生成之前不能修改授權代表.收到第一筆交易之後會自動生成初始區塊。</string>
 
     <!--translate third-->
-    <string name="scan_warning">請對準二維碼，耐心等待</string>
+    <string name="scan_qr_code">請掃描二維碼</string>
     <string name="enter_address_of_the_authorized">請輸入授權代表帳戶地址</string>
     <string name="address_format_error">地址格式錯誤</string>
     <string name="change_successfully">更改成功</string>
@@ -100,8 +100,9 @@
     <string name="data_acquisition_error">獲取數據异常</string>
     <string name="on_transaction">當前正在發起交易，請勿退出</string>
     <string name="please_input_transaction_amount">請輸入交易數額</string>
-    <string name="copy_account_address_success">複製帳戶地址成功</string>
+    <string name="successfully_copied">複製成功</string>
     <string name="sure_to_delete">確定删除</string>
+    <string name="no_account_address_add">沒有收款帳戶地址，請添加</string>
 
 
 </resources>
