--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,11 +78,11 @@
     <string name="the_file_is_damaged_please_upload_again">The file is damaged, please upload again</string>
     <string name="please_login_again">Please login again</string>
 
-    <string name="scan_warning">Please aim at the two-dimensional code and wait patiently</string>
+    <string name="scan_qr_code">Please scan qr code</string>
     <string name="double_click_for_exit">Press the return button again to exit the program.</string>
     <string name="no_account_address_to_choose_from">Currently, there is no account address to choose from</string>
 
-    <string name="please_open_camera_permission">Please manually open the camera privileges.</string>
+    <string name="please_grant_camera_permission">Please grant camera permissions.</string>
     <string name="transaction_to">Transfer to %s  </string>
     <string name="authorized_representative_address">Authorized representative address account</string>
     <string name="wallet_info">Wallet information</string>
@@ -100,10 +100,8 @@
     <string name="data_acquisition_error">Data acquisition error</string>
     <string name="on_transaction">Trading is currently under way, please do not quit.</string>
     <string name="please_input_transaction_amount">Please enter transaction Amount.</string>
-    <string name="copy_account_address_success">Duplicate account address successfully.</string>
+    <string name="successfully_copied">successfully copied</string>
     <string name="sure_to_delete">Sure to delete</string>
-
-
-
+    <string name="no_account_address_add">No account address for collection, please add</string>
 
 </resources>
