--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -51,7 +51,7 @@
     <string name="transaction_has_successfully">交易发送成功</string>
     <string name="transaction_has_failure">交易发送失败，请稍后重试</string>
     <string name="transaction_has_successfully_and_the_number_is">交易已发送成功，交易编号如下：</string>
-    <string name="chick_o_the_copy">点击复制</string>
+    <string name="chick_to_copy">点击复制</string>
     <string name="authorized_representative_can_not_be_modified">在初始区块生成之前不能修改授权代表.收到第一笔交易之后会自动生成初始区块。</string>
 
     <!--translate third-->
