--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -59,7 +59,7 @@
     <string name="transaction_has_successfully">交易發送成功</string>
     <string name="transaction_has_failure">交易發送失敗，請稍後再試</string>
     <string name="transaction_has_successfully_and_the_number_is">交易已發送成功，交易編號如下：</string>
-    <string name="chick_o_the_copy">點擊複製</string>
+    <string name="chick_to_copy">點擊複製</string>
     <string name="authorized_representative_can_not_be_modified">在初始區塊生成之前不能修改授權代表.收到第一筆交易之後會自動生成初始區塊。</string>
 
     <!--translate third-->
