--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -62,8 +62,7 @@
     <string name="change_successfully">更改成功</string>
     <string name="change_failed">更改失败</string>
     <string name="login_failure">登录失败，请稍后重试</string>
-    <!-- <string name="password_rule_of_length">密码至少由8至16位数字与字符组成</string>-->
-    <string name="password_rule_of_length">密码至少由8位数字与字符组成</string>
+     <string name="password_rule_of_length">密码至少由8至16位数字与字符组成</string>
     <string name="password_rule_of_content">密码必须包含数字和字符</string>
     <string name="password_entered_not_match">两次输入的密码不一致</string>
     <string name="password_length_error">密码长度错误</string>
