--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -9,7 +9,7 @@
     <string name="warning">提示</string>
     <string name="create_wallet_dialog_message">創建新錢包會刪除現有錢包的所有信息，請確保現有錢包的私鑰信息已經完成備份！</string>
     <string name="import_wallet_dialog_message">導入錢包會刪除現有錢包的所有信息，請確保現有錢包的私鑰信息已經完成備份！</string>
-    <string name="sure">確定</string>
+    <string name="confirm">確定</string>
     <string name="cancel">取消</string>
     <string name="please_input_password_again">請再次輸入密碼</string>
     <string name="remember_password">該密碼用於加錢包信息和解鎖錢包，請牢記！！</string>
