--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -41,7 +41,6 @@
 
 
     <string name="double_click_for_exit">再按一次返回鍵退出程序</string>
-    <string name="please_grant_camera_permission">請打開相機權限</string>
     <string name="transaction_to">向  %s   轉帳</string>
     <string name="authorized_representative_address">授權代表地址帳戶</string>
 
@@ -104,6 +103,15 @@
     <string name="sure_to_delete">確定删除</string>
     <string name="no_account_address_add">沒有收款帳戶地址，請添加</string>
     <string name="password_rule"><![CDATA[0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM!@#¥%^&*-_]]></string>
-
+    <!--translate forth-->
+    <string name="to_setting_grant_permission">點擊"確定"跳轉至系統設置開啟權限</string>
+    <string name="network_not_reachable">網絡狀態異常，請檢查您的網絡設置</string>
+    <string name="please_input_address_name">請輸入帳戶名稱</string>
+    <string name="please_input_receive_account">請輸入收款賬戶地址</string>
+    <string name="app_need_update">您的應用需要更新，點擊"確定"開始更新</string>
+    <string name="address_over_quantity">您添加的地址已超過一百筆，請刪除後繼續添加</string>
+    <string name="language_chinese_simplified">中文(簡體)</string>
+    <string name="lauguage_english">英文</string>
+    <string name="language_chinese_traditional">中文(繁體)</string>
 
 </resources>
