--- a/qrcode/src/main/res/values-zh-rTW/strings.xml
+++ b/qrcode/src/main/res/values-zh-rTW/strings.xml
@@ -1,5 +1,4 @@
 <resources>
     <string name="app_name">掃描</string>
-    <string name="scan_qr_code">請對準二維碼，耐心等待</string>
-
+    <string name="scan_qr_code">請掃描二維碼</string>
 </resources>
