--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -51,7 +51,7 @@
     <string name="input_error">輸入錯誤</string>
     <string name="logout">登出</string>
     <string name="logout_failure">登出帳戶失敗</string>
-    <string name="set_password_for_your_wallet">設置密碼</string>
+    <string name="set_password_for_your_wallet">請為導入的錢包設置密碼</string>
     <string name="input_password">請輸入密碼</string>
     <string name="save_wallet_file_warning">錢包文件和私鑰請妥善保管，私鑰丟失將丟失錢包。</string>
     <string name="check_my_transaction_records">查看我的交易紀錄</string>
