--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Bcaas</string>
 
     <!--translate-->
-    <string name="unlock">Unlock</string>
+    <string name="unlock">Unlock Wallet</string>
     <string name="password">Password</string>
     <string name="create_new_wallet">Create a new wallet</string>
     <string name="import_wallet">Import wallet</string>
@@ -47,7 +47,7 @@
     <string name="input_error">Input error</string>
     <string name="logout">Log out</string>
     <string name="logout_failure">logout failed</string>
-    <string name="input_password">enter password</string>
+    <string name="input_password">Please enter password</string>
     <string name="save_wallet_file_warning">Please save your wallet file and private key,lost private key means lost funds.</string>
     <string name="check_my_transaction_records">Check my transaction records</string>
     <string name="transaction_has_successfully">The transaction was sent successfully</string>
@@ -114,4 +114,5 @@
     <string name="language_chinese_simplified">Chinese(Simplified)</string>
     <string name="lauguage_english">English</string>
     <string name="language_chinese_traditional">Chinese(Traditional)</string>
+    <string name="brand_info">COPYRIGHT @ BCAAS,INC. ALL RIGHTS RESERVED</string>
 </resources>
