「首页」无交易记录显示，具体api还没有接入

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -55,6 +55,8 @@
     <string name="input_password">請輸入密碼</string>
     <string name="save_wallet_file_warning">錢包文件和私鑰請妥善保管，私鑰丟失將丟失錢包。</string>
     <string name="check_my_transaction_records">查看我的交易紀錄</string>
+    <string name="no_transaction_records">無交易紀錄</string>
+    <string name="transaction_records">交易紀錄</string>
     <string name="transaction_has_successfully">交易發送成功</string>
     <string name="transaction_has_failure">交易發送失敗，請稍後再試</string>
     <string name="transaction_has_successfully_and_the_number_is">交易已發送成功，交易編號如下：</string>
@@ -73,7 +75,7 @@
     <string name="password_entered_not_match">兩次輸入的密碼不一致</string>
     <string name="password_length_error">密碼長度錯誤</string>
     <string name="please_log_in_first">您還未登錄，請先登錄</string>
-    <string name="sure_logout">確定退出？</string>
+    <string name="sure_logout">確定登出？</string>
     <string name="the_address_of_receiving_account_is_empty">收款帳戶地址為空</string>
     <string name="the_address_of_receiving_account_is_error">收款帳戶地址錯誤</string>
     <string name="private_key_error">私密金鑰格式錯誤</string>
