--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -48,6 +48,8 @@
     <string name="input_password">请输入密码</string>
     <string name="save_wallet_file_warning">钱包文件和私钥请妥善保管，私钥丢失将丢失钱包。</string>
     <string name="check_my_transaction_records">查看我的交易记录</string>
+    <string name="no_transaction_records">无交易记录</string>
+    <string name="transaction_records">交易记录</string>
     <string name="transaction_has_successfully">交易发送成功</string>
     <string name="transaction_has_failure">交易发送失败，请稍后重试</string>
     <string name="transaction_has_successfully_and_the_number_is">交易已发送成功，交易编号如下：</string>
@@ -67,7 +69,7 @@
     <string name="password_entered_not_match">两次输入的密码不一致</string>
     <string name="password_length_error">密码长度错误</string>
     <string name="please_log_in_first">您还未登录，请先登录</string>
-    <string name="sure_logout">确定退出？</string>
+    <string name="sure_logout">确定登出？</string>
     <string name="the_address_of_receiving_account_is_empty">收款账户地址为空</string>
     <string name="the_address_of_receiving_account_is_error">收款账户地址错误</string>
     <string name="private_key_error">私钥格式错误</string>
