--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,18 +19,18 @@
     <string name="finish">COMPLETED</string>
     <string name="enter_private_key">Type your private key</string>
     <string name="set_password_for_your_wallet">Please set password for your wallet</string>
-    <string name="my_account_address">My Account Address</string>
-    <string name="account_balance">Account Balance</string>
+    <string name="my_account_address">My account address</string>
+    <string name="account_balance">Account balance</string>
     <string name="home">Home</string>
     <string name="receive">Receive</string>
     <string name="scan">Scan</string>
     <string name="send">Send</string>
     <string name="settings">Settings</string>
-    <string name="receive_account_address">Receiving Account Address</string>
-    <string name="transaction_amount">Transaction Amount</string>
-    <string name="check_wallet_info">View Wallet Info</string>
-    <string name="address_manager">Address Management</string>
-    <string name="modify_password">Change Password</string>
+    <string name="receive_account_address">Receiving account address</string>
+    <string name="transaction_amount">Transaction amount</string>
+    <string name="check_wallet_info">View wallet info</string>
+    <string name="address_manager">Address management</string>
+    <string name="modify_password">Change password</string>
     <string name="save_private_key_hint">We suggest you write down the private key  on a paper in case of loss.</string>
     <string name="send_email">Send by email</string>
     <string name="send_wallet_file_by_email">Send wallet file by email</string>
@@ -117,4 +117,7 @@
     <string name="lauguage_english">English</string>
     <string name="language_chinese_traditional">Chinese(Traditional)</string>
     <string name="brand_info">COPYRIGHT @ BCAAS,INC. ALL RIGHTS RESERVED</string>
+    <string name="network_connection_error">Network connection error</string>
+    <string name="unable_to_trade_at_present">Unable to trade at present, failed to acquire balance</string>
+
 </resources>
